# ohtu-2021-viikko2

./: README.md
.github/workflows/: varasto_pylint.yml
poetry-web/: pyproject.toml
project-reader/src/: project_reader.py
varasto/: .pylintrc
varasto/src/: varasto.py
verkkokauppa-1/src/: kauppa.py  pankki.py  varasto.py
