[tool.poetry]
name = "ohtu-2021-viikko2"
version = "0.1.0"
description = ""
authors = ["ferealqq <pekka.mattinen@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
